--- a/README
+++ b/README
@@ -2,13 +2,21 @@ Entry File Drop plugin for Movable Type
 ---------------------------------------
 
 This plugin enables you to drag-n-drop files to the assets box on the edit entry screen.
-they will be uploaded as if you have 'add asset' them one-by-one
+they will be uploaded as if you have 'add asset' them one-by-one.
 
 It gives you a small "Manage Tags" dialog (link in the buttom of the assets box)
-that let you add and remove tags for the entry tags
+that let you add and remove tags for the entry tags.
 
 You can set (in the blog plugin config page) a list of suggested tags, and they 
-will be added as special buttons to the list
+will be added as special buttons to the list.
+
+You can sort the assets by any field. So it the entry assets are sorted by some
+field in the template, you can see them sorted in your asset box.
+
+You can add colors to assets, using coditions. Conditions can be a tag on the asset,
+or comparing the field (that is used for sorting) to some value.
+The plugin comes with a CSS file with basic colors, using "asset-bg-<color>",
+where color can be blue, red, green, yellow, brown, gray.
 
 Installation
 ------------
